--- a/j3x/admin_id-ID/id-ID.com_ajax.ini
+++ b/j3x/admin_id-ID/id-ID.com_ajax.ini
@@ -1,8 +1,8 @@
-; Joomla! Project
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; $Id: id-ID.com_ajax.ini 3.4 2015-02-19 $
+; Tim Hanacaraka Joomla! Indonesia
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
-
 
 COM_AJAX="Antarmuka Ajax"
 COM_AJAX_XML_DESCRIPTION="Antarmuka Ajax yang bisa diperluas untuk Joomla"
