--- a/j3x/admin_id-ID/id-ID.com_cache.sys.ini
+++ b/j3x/admin_id-ID/id-ID.com_cache.sys.ini
@@ -1,8 +1,8 @@
-; $Id: id-ID.com_cache.sys.ini 867 2014-02-23 00:27:05Z sikumbang $
+; $Id: id-ID.com_cache.sys.ini 3.4 2015-02-19 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-COM_CACHE="Pengelolaan Cache"
-COM_CACHE_XML_DESCRIPTION="Komponen untuk pengelolaan cache"
+COM_CACHE="Pengelolaan Tembolok"
+COM_CACHE_XML_DESCRIPTION="Komponen untuk pengelolaan tembolok"
