--- a/j3x/admin_id-ID/id-ID.com_categories.ini
+++ b/j3x/admin_id-ID/id-ID.com_categories.ini
@@ -1,22 +1,22 @@
-; $Id: id-ID.com_categories.ini 900 2014-04-24 23:03:14Z dw1rianto $
+; $Id: id-ID.com_categories.ini 3.4 2015-02-19 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
 CATEGORIES_FIELDSET_OPTIONS="Opsi"
 COM_CATEGORIES="Kategori"
-COM_CATEGORIES_ACCESS_CREATE_DESC="Pengaturan baru untuk <strong>membuat tindakan</strong> di kategori ini dan pengaturan terhitung berdasarkan kategori induk dan izin kelompok."
-COM_CATEGORIES_ACCESS_DELETE_DESC="Pengaturan baru untuk <strong>menghapus tindakan</strong> di kategori ini dan pengaturan terhitung berdasarkan kategori induk dan izin kelompok."
-COM_CATEGORIES_ACCESS_EDIT_DESC="Pengaturan baru untuk <strong>mengedit tindakan</strong> di kategori ini dan pengaturan terhitung berdasarkan kategori induk dan izin kelompok."
-COM_CATEGORIES_ACCESS_EDITOWN_DESC="Pengaturan baru untuk <strong>mengedit tindakan sendiri</strong> di kategori ini dan pengaturan terhitung berdasarkan kategori induk dan izin kelompok."
-COM_CATEGORIES_ACCESS_EDITSTATE_DESC="Pengaturan baru untuk <strong>mengedit bagian tindakan</strong> di kategori ini dan pengaturan terhitung berdasarkan kategori induk dan izin kelompok."
+COM_CATEGORIES_ACCESS_CREATE_DESC="Setelan baru untuk <strong>membuat tindakan</strong> di kategori ini dan setelan gabungan berdasarkan kategori induk dan izin kelompok."
+COM_CATEGORIES_ACCESS_DELETE_DESC="Setelan baru untuk <strong>menghapus tindakan</strong> di kategori ini dan setelan gabungan berdasarkan kategori induk dan izin kelompok."
+COM_CATEGORIES_ACCESS_EDIT_DESC="Setelan baru untuk <strong>mengedit tindakan</strong> di kategori ini dan setelan gabungan berdasarkan kategori induk dan izin kelompok."
+COM_CATEGORIES_ACCESS_EDITOWN_DESC="Setelan baru untuk <strong>mengedit tindakan sendiri</strong> di kategori ini dan setelan gabungan berdasarkan kategori induk dan izin kelompok."
+COM_CATEGORIES_ACCESS_EDITSTATE_DESC="Setelan baru untuk <strong>mengedit bagian tindakan</strong> di kategori ini dan setelan gabungan berdasarkan kategori induk dan izin kelompok."
 COM_CATEGORIES_BASIC_FIELDSET_LABEL="Opsi Dasar"
 COM_CATEGORIES_BATCH_CANNOT_CREATE="Anda tidak diizinkan untuk membuat kategori baru di dalam kategori ini."
-COM_CATEGORIES_BATCH_CANNOT_EDIT="Anda tidak diizinkan untuk mengedit satu atau lebih kategori-kategori ini.."
+COM_CATEGORIES_BATCH_CANNOT_EDIT="Anda tidak diizinkan untuk mengedit satu atau lebih kategori-kategori ini."
 COM_CATEGORIES_BATCH_CATEGORY_LABEL="Pilih Kategori untuk dipindah/salin"
 COM_CATEGORIES_BATCH_OPTIONS="Proses sekaligus kumpulan kategori yang dipilih"
-COM_CATEGORIES_BATCH_TIP="Jika sebuah kategori dipilih untuk dipindahkan/disalin maka tindakan yang dipilih akan diaplikasikan ke kategori-kategori yang akan disalin atau dipindahkan. Selain itu, semua tindakan akan diaplikasi kan ke kategori-katefori yang dipilih"
+COM_CATEGORIES_BATCH_TIP="Jika sebuah kategori dipilih untuk dipindahkan/disalin maka tindakan yang dipilih akan diterapkan ke kategori-kategori yang akan disalin atau dipindahkan. Selain itu, semua tindakan akan diterapkan ke kategori-katefori yang dipilih"
 COM_CATEGORIES_CATEGORIES_BASE_TITLE="Pengelolaan Kategori"
 COM_CATEGORIES_CATEGORIES_TITLE="Pengelolaan Kategori: %s"
 COM_CATEGORIES_CATEGORY_ADD_TITLE="Pengelolaan Kategori: Tambah Sebuah Kategori %s"
@@ -30,7 +30,9 @@ COM_CATEGORIES_DESCRIPTION_DESC="Masukkan keterangan kategori pilihan di dalam a
 COM_CATEGORIES_EDIT_CATEGORY="Edit Kategori"
 COM_CATEGORIES_ERROR_ALL_LANGUAGE_ASSOCIATED="Sebuah butir kategori diatur ke Semua Bahasa tidak dapat dihubungkan. Hubungan belum diatur."
 COM_CATEGORIES_FIELD_BASIC_LABEL="Opsi"
-COM_CATEGORIES_FIELD_HITS_DESC="Jumlah hit untuk kategori ini"
+COM_CATEGORIES_FIELD_HITS_DESC="Jumlah dilihat untuk kategori ini"
+COM_CATEGORIES_FIELD_IMAGE_ALT_LABEL="Teks Alt"
+COM_CATEGORIES_FIELD_IMAGE_ALT_DESC="Teks alternatif yang digunakan oleh pengunjung yang tidak memiliki akses ke gambar."
 COM_CATEGORIES_FIELD_IMAGE_DESC="Pilih sebuah gambar untuk kategori ini"
 COM_CATEGORIES_FIELD_IMAGE_LABEL="Gambar"
 COM_CATEGORIES_FIELD_LANGUAGE_DESC="Tentukan bahasa untuk kategori ini."
@@ -70,5 +72,5 @@ COM_CATEGORIES_TIP_ASSOCIATED_LANGUAGE="%s %s"
 COM_CATEGORIES_XML_DESCRIPTION="Komponen ini mengelola kategori"
 JGLOBAL_NO_ITEM_SELECTED="Tidak ada kategori yang dipilih"
 JLIB_DATABASE_ERROR_ANCESTOR_NODES_LOWER_STATE="Tidak dapat mengubah bagian yang diterbitkan jika lebih kurang dari bagian kategori induk."
-JLIB_HTML_ACCESS_SUMMARY_DESC="Yang ditunjukkan dibawah adalah tampilan sekilas pengaturan izin untuk kategori ini. Klik tab diatas untuk mengkustomisasi pengaturan ini dengan tindakan."
-JLIB_RULES_SETTING_NOTES_ITEM="1. Jika Anda mengubah pengaturan diatas, maka hanya akan diaplikasikan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari konfigurasi global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana pengaturan yang ada pada konfigurasi global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan ini pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika ini konflik dengan konfigurasi global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Pengaturan Gabungan).<br />2. Jika Anda memilih pengaturan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali pengaturan gabungan."
+JLIB_HTML_ACCESS_SUMMARY_DESC="Yang ditunjukkan dibawah adalah tampilan sekilas setelan izin untuk kategori ini. Klik tab diatas untuk mengkustomisasi setelan ini dengan tindakan."
+JLIB_RULES_SETTING_NOTES_ITEM="1. Jika Anda mengubah setelan diatas, maka hanya akan diterapkan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari konfigurasi global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana setelan yang ada pada konfigurasi global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan ini pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika terdapat konflik dengan konfigurasi global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Setelan Gabungan).<br />2. Jika Anda memilih setelan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali setelan gabungan."
