update admin 3.4.0 consistency/add

--- a/j3x/admin_id-ID/id-ID.com_banners.sys.ini
+++ b/j3x/admin_id-ID/id-ID.com_banners.sys.ini
@@ -11,7 +11,7 @@ COM_BANNERS_CATEGORY_EDIT_TITLE="Pengelolaan Kategori: Edit Satu Kategori Banner
 COM_BANNERS_CATEGORIES="Kategori"
 COM_BANNERS_CONTENT_TYPE_BANNER="Banner"
 COM_BANNERS_CONTENT_TYPE_CLIENT="Banner Klien"
-COM_BANNERS_CONTENT_TYPE_CATEGORY="Banner Kategori"
+COM_BANNERS_CONTENT_TYPE_CATEGORY="Kategori Banner"
 COM_BANNERS_CLIENTS="Klien"
 COM_BANNERS_TRACKS="Telusur"
 COM_BANNERS_XML_DESCRIPTION="Komponen ini mengatur banner dan banner klien"
