--- a/j3x/admin_id-ID/id-ID.com_categories.ini
+++ b/j3x/admin_id-ID/id-ID.com_categories.ini
@@ -36,7 +36,7 @@ COM_CATEGORIES_FIELD_IMAGE_ALT_DESC="Teks alternatif yang digunakan oleh pengunj
 COM_CATEGORIES_FIELD_IMAGE_DESC="Pilih sebuah gambar untuk kategori ini"
 COM_CATEGORIES_FIELD_IMAGE_LABEL="Gambar"
 COM_CATEGORIES_FIELD_LANGUAGE_DESC="Tentukan bahasa untuk kategori ini."
-COM_CATEGORIES_FIELD_PARENT_DESC="Pilih sebuah Induk Kategori"
+COM_CATEGORIES_FIELD_PARENT_DESC="Pilih sebuah Kategori Induk"
 COM_CATEGORIES_FIELD_PARENT_LABEL="Induk"
 COM_CATEGORIES_FIELDSET_DETAILS="Detail Kategori"
 COM_CATEGORIES_FIELDSET_PUBLISHING="Opsi Penerbitan"
@@ -67,7 +67,7 @@ COM_CATEGORIES_REBUILD_FAILURE="Gagal membangun kembali Kategori data ranting."
 COM_CATEGORIES_REBUILD_SUCCESS="Data ranting Kategori berhasil dibangun."
 COM_CATEGORIES_SAVE_SUCCESS="Kategori berhasil disimpan"
 COM_CATEGORIES_SELECT_A_CATEGORY="Pilih Kategori"
-COM_CATEGORIES_TIP_ASSOCIATION="Kategori-kategori terhubung"
+COM_CATEGORIES_TIP_ASSOCIATION="Kategori terhubung"
 COM_CATEGORIES_TIP_ASSOCIATED_LANGUAGE="%s %s"
 COM_CATEGORIES_XML_DESCRIPTION="Komponen ini mengelola kategori"
 JGLOBAL_NO_ITEM_SELECTED="Tidak ada kategori yang dipilih"
