--- a/j3x/admin_id-ID/id-ID.com_contact.ini
+++ b/j3x/admin_id-ID/id-ID.com_contact.ini
@@ -1,6 +1,6 @@
-; $Id: id-ID.com_contact.ini 900 2014-04-24 23:03:14Z dw1rianto $
+; $Id: id-ID.com_contact.ini 3.4 2015-02-20 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
@@ -8,12 +8,12 @@ COM_CONTACT="Kontak"
 COM_CONTACT_BASIC_OPTIONS_FIELDSET_LABEL="Opsi Tampilan Kontak"
 COM_CONTACT_BATCH_MENU_LABEL="Pilih Kategori untuk di Pindahkan/Salin"
 COM_CONTACT_BATCH_OPTIONS="Proses sekaligus kumpulan kontak yang dipilih"
-COM_CONTACT_BATCH_TIP="Jika salah satu tindakan dipilih maka akan diaplikasikan kepada kontak yang akan disalin atau dipindahkan. Selain itu semua tindakan akan diaplikasikan ke kontak yang dipilih."
+COM_CONTACT_BATCH_TIP="Jika salah satu tindakan dipilih maka akan diterapkan kepada kontak yang akan disalin atau dipindahkan. Selain itu semua tindakan akan diterapkan ke kontak yang dipilih."
 COM_CONTACT_CATEGORIES_VIEW_DEFAULT_DESC="Menampilkan sebuah daftar kontak kategori dengan kategori."
 COM_CONTACT_CATEGORY_VIEW_DEFAULT_DESC="Tampilan ini menampilkan daftar kontak di dalam sebuah kategori."
 COM_CONTACT_CHANGE_CONTACT="Ubah Kontak"
 COM_CONTACT_CHANGE_CONTACT_BUTTON="Ubah Kontak"
-COM_CONTACT_CONFIG_INTEGRATION_SETTINGS_DESC="Pengaturan ini menentukan bagaimana Komponen Kontak akan diintegrasikan dengan ekstensi lainnya."
+COM_CONTACT_CONFIG_INTEGRATION_SETTINGS_DESC="Setelan ini menentukan bagaimana Komponen Kontak akan diintegrasikan dengan ekstensi lainnya."
 COM_CONTACT_CONFIGURATION="Opsi Pengelolaan Kontak"
 COM_CONTACT_CONTACT_DETAILS="Detail Kontak"
 COM_CONTACT_CONTACT_DISPLAY_DETAILS="Opsi tampilan untuk masing-masing halaman kontak."
@@ -23,11 +23,11 @@ COM_CONTACT_DETAILS="Informasi Kontak"
 COM_CONTACT_EDIT_CONTACT="Edit Kontak"
 COM_CONTACT_EDIT_DETAILS="Edit informasi kontak yang ditampilkan di halaman masing-masing."
 COM_CONTACT_ERROR_UNIQUE_ALIAS="Kontak lain dari kategori ini mempunya alias yang sama"
-COM_CONTACT_ERROR_ALL_LANGUAGE_ASSOCIATED="Sebuah butir kontak yang diatur ke Semua bahasa tidak dapat dihubungkan. Asosiasi belum ditetapkan."
+COM_CONTACT_ERROR_ALL_LANGUAGE_ASSOCIATED="Sebuah butir kontak yang diatur ke Semua bahasa tidak dapat dihubungkan. Hubungan belum ditetapkan."
 COM_CONTACT_FIELD_ARTICLES_SHOW_DESC="Jika kontak ini dipetakan untuk seorang pengguna, dan jika diatur untuk Ditampilkan, maka daftar artikel yang dibuat oleh pengguna ini akan ditampilkan."
 COM_CONTACT_FIELD_ARTICLES_SHOW_LABEL="Artikel Pengguna"
-COM_CONTACT_FIELD_BREADCRUMBS_DESC="Tampilkan/Sembunyikan Breadcrumbs Kategori"
-COM_CONTACT_FIELD_BREADCRUMBS_LABEL="Tampilkan Breadcrumbs Kategori"
+COM_CONTACT_FIELD_BREADCRUMBS_DESC="Tampilkan/Sembunyikan Kategori Jejak"
+COM_CONTACT_FIELD_BREADCRUMBS_LABEL="Tampilkan Kategori Jejak"
 COM_CONTACT_FIELD_CAPTCHA_DESC="Pilih plugin captcha yang akan digunakan di formulir kontak. Anda mungkin memerlukan informasi-informasi yang dibutuhkan untuk plugin captcha Anda di dalam Pengelolaan Plugin.<br />Jika 'Standar' yang dipilih, pastikan sebuah plugin captcha sudah dipilih sebelumnya di Konfigurasi Global."
 COM_CONTACT_FIELD_CAPTCHA_LABEL="Izinkan Captcha di Kontak"
 COM_CONTACT_FIELD_CATEGORIES_DESC="Menampilkan daftar kategori kontak bersama sebuah kategori."
@@ -42,8 +42,8 @@ COM_CONTACT_FIELD_CONFIG_BANNED_SUBJECT_DESC="Subyek yang tidak diizinkan di dal
 COM_CONTACT_FIELD_CONFIG_BANNED_SUBJECT_LABEL="Subyek Yang Dilarang"
 COM_CONTACT_FIELD_CONFIG_BANNED_TEXT_DESC="Teks tidak diizinkan di dalam body formulir kontak"
 COM_CONTACT_FIELD_CONFIG_BANNED_TEXT_LABEL="Teks Yang Dilarang"
-COM_CONTACT_FIELD_CONFIG_CATEGORIES_DESC="Pengaturan ini diaplikasikan untuk Opsi Kategori Kontak kecuali mereka diubah untuk butir menu tertentu."
-COM_CONTACT_FIELD_CONFIG_CATEGORY_DESC="Pengaturan ini diaplikasikan untuk Opsi Kategori Kontak kecuali mereka diubah untuk butir menu tertentu."
+COM_CONTACT_FIELD_CONFIG_CATEGORIES_DESC="Setelan ini diterapkan untuk Opsi Kategori Kontak kecuali mereka diubah untuk butir menu tertentu."
+COM_CONTACT_FIELD_CONFIG_CATEGORY_DESC="Setelan ini diterapkan untuk Opsi Kategori Kontak kecuali mereka diubah untuk butir menu tertentu."
 COM_CONTACT_FIELD_CONFIG_CONTACT_FORM="Formulir"
 COM_CONTACT_FIELD_CONFIG_COUNTRY_DESC="Tampilkan/Sembunyikan kolom Negara di dalam daftar Kontak."
 COM_CONTACT_FIELD_CONFIG_COUNTRY_LABEL="Negara"
@@ -52,7 +52,7 @@ COM_CONTACT_FIELD_CONFIG_CUSTOM_REPLY_LABEL="Balas Kustom"
 COM_CONTACT_FIELD_CONFIG_EMAIL_DESC="Tampilkan/Sembunyikan kolom Email di dalam daftar Kontak."
 COM_CONTACT_FIELD_CONFIG_FAX_DESC="Tampilkan/Sembunyikan kolom Fax di dalam daftar Kontak."
 COM_CONTACT_FIELD_CONFIG_FAX_LABEL="Fax"
-COM_CONTACT_FIELD_CONFIG_INDIVIDUAL_CONTACT_DESC="Pengaturan ini diaplikasikan untuk Kontak tunggal kecuali mereka diubah untuk butir menu tertentu atau Kontak."
+COM_CONTACT_FIELD_CONFIG_INDIVIDUAL_CONTACT_DESC="Setelan ini diterapkan untuk Kontak tunggal kecuali mereka diubah untuk butir menu tertentu atau Kontak."
 COM_CONTACT_FIELD_CONFIG_INDIVIDUAL_CONTACT_DISPLAY="Kontak"
 COM_CONTACT_FIELD_CONFIG_MOBILE_DESC="Tampilkan/Sembunyikan menampilkan kolom Telepon Genggam di dalam daftar Kontak."
 COM_CONTACT_FIELD_CONFIG_MOBILE_LABEL="Telepon Genggam"
@@ -68,7 +68,7 @@ COM_CONTACT_FIELD_CONFIG_STATE_LABEL="Provinsi"
 COM_CONTACT_FIELD_CONFIG_STATE_DESC="Tampilkan/Sembunyikan kolom Provinsi di dalam daftar Kontak."
 COM_CONTACT_FIELD_CONFIG_SUBURB_DESC="Tampilkan/Sembunyikan kolom Kota di dalam daftar Kontak."
 COM_CONTACT_FIELD_CONFIG_SUBURB_LABEL="Kota"
-COM_CONTACT_FIELD_CONFIG_TABLE_OF_CONTACTS_DESC="Pengaturan ini diaplikasikan kepada Opsi Daftar Kontak kecuali mereka diubah untuk butir menu tertentu."
+COM_CONTACT_FIELD_CONFIG_TABLE_OF_CONTACTS_DESC="Setelan ini diterapkan kepada Opsi Daftar Kontak kecuali mereka diubah untuk butir menu tertentu."
 COM_CONTACT_FIELD_CONFIG_VCARD_DESC="Tampilkan/Sembunyikan kolom vCard di dalam daftar Kontak."
 COM_CONTACT_FIELD_CONFIG_VCARD_LABEL="vCard"
 COM_CONTACT_FIELD_CONTACT_SHOW_CATEGORY_DESC="Jika &quot;Sembunyikan&quot;, Kategori Kontak tidak akan ditampilkan. Jika &quot;Tampilkan Tanpa Tautan&quot;, Kategori akan ditampilkan sebagai teks. Jika &quot;Tampilkan Dengan Tautan&quot;, Kategori akan ditampilkan sebagai tautan ke sebuah Butir Menu Kategori Tunggal."
@@ -104,7 +104,7 @@ COM_CONTACT_FIELD_ICONS_MISC_LABEL="Ikon Lain-lain"
 COM_CONTACT_FIELD_ICONS_MOBILE_DESC="Pilih ikon Telepon Genggam. Jika tak ada yang dipilih, ikon standar yang akan ditampilkan."
 COM_CONTACT_FIELD_ICONS_MOBILE_LABEL="Ikon Telepon Genggam"
 COM_CONTACT_FIELD_ICONS_SETTINGS_DESC="Pilih apakah akan menampilkan ikon, teks atau tak satupun disebelah informasi."
-COM_CONTACT_FIELD_ICONS_SETTINGS_LABEL="Pengaturan"
+COM_CONTACT_FIELD_ICONS_SETTINGS_LABEL="Setelan"
 COM_CONTACT_FIELD_ICONS_TELEPHONE_DESC="Pilih ikon Telepon. Jika tak ada yang dipilih, ikon standar yang akan ditampilkan."
 COM_CONTACT_FIELD_ICONS_TELEPHONE_LABEL="Ikon Telepon"
 COM_CONTACT_FIELD_IMAGE_ALIGN_DESC="Perataan gambar"
@@ -138,19 +138,19 @@ COM_CONTACT_FIELD_LANGUAGE_DESC="Tentukan sebuah bahasa untuk kontak ini"
 COM_CONTACT_FIELD_LIMIT_BOX_DESC="Tampilkan/Sembunyikan kotak batasan"
 COM_CONTACT_FIELD_LIMIT_BOX_LABEL="Kotak batasan"
 COM_CONTACT_FIELD_LINK_NAME_DESC="Sebuah tautan tambahan untuk kontak ini"
-COM_CONTACT_FIELD_LINKA_DESC="Deskripsi untuk Tautan A"
+COM_CONTACT_FIELD_LINKA_DESC="Masukkan URL untuk Tautan A"
 COM_CONTACT_FIELD_LINKA_LABEL="URL Tautan A"
 COM_CONTACT_FIELD_LINKA_NAME_LABEL="Label Tautan A"
-COM_CONTACT_FIELD_LINKB_DESC="Deskripsi untuk Tautan B"
+COM_CONTACT_FIELD_LINKB_DESC="Masukkan URL untuk Tautan B"
 COM_CONTACT_FIELD_LINKB_LABEL="URL Tautan B"
 COM_CONTACT_FIELD_LINKB_NAME_LABEL="Label Tautan B"
-COM_CONTACT_FIELD_LINKC_DESC="Deskripsi untuk Tautan C"
+COM_CONTACT_FIELD_LINKC_DESC="Masukkan URL untuk Tautan C"
 COM_CONTACT_FIELD_LINKC_LABEL="URL Tautan C"
 COM_CONTACT_FIELD_LINKC_NAME_LABEL="Label Tautan C"
-COM_CONTACT_FIELD_LINKD_DESC="Deskripsi untuk Tautan D"
+COM_CONTACT_FIELD_LINKD_DESC="Masukkan URL untuk Tautan D"
 COM_CONTACT_FIELD_LINKD_LABEL="URL Tautan D"
 COM_CONTACT_FIELD_LINKD_NAME_LABEL="Label Tautan D"
-COM_CONTACT_FIELD_LINKE_DESC="Deskripsi untuk Tautan E"
+COM_CONTACT_FIELD_LINKE_DESC="Masukkan URL untuk Tautan E"
 COM_CONTACT_FIELD_LINKE_LABEL="URL Tautan E"
 COM_CONTACT_FIELD_LINKE_NAME_LABEL="Label Tautan E"
 COM_CONTACT_FIELD_LINKED_USER_DESC="Pengguna Joomla! yang Dihubungkan"
@@ -235,11 +235,11 @@ COM_CONTACT_FILTER_DESC="Pilih tipe penyaringan untuk menampilkan per standar."
 COM_CONTACT_FILTER_LABEL="Kolom penyaringan"
 COM_CONTACT_FILTER_SEARCH_DESC="Masukkan teks untuk menampilkan kontak yang sesuai"
 COM_CONTACT_ICONS_SETTINGS="Ikon"
-COM_CONTACT_HEADING_ASSOCIATION="Asosiasi"
-COM_CONTACT_HITS_DESC="Jumlah hit untuk kontak ini"
+COM_CONTACT_HEADING_ASSOCIATION="Hubungan"
+COM_CONTACT_HITS_DESC="Jumlah dilihat untuk kontak ini"
 COM_CONTACT_ID_LABEL="ID"
-COM_CONTACT_ITEM_ASSOCIATIONS_FIELDSET_LABEL="Asosiasi Butir Kontak"
-COM_CONTACT_ITEM_ASSOCIATIONS_FIELDSET_DESC="Hanya untuk MultiBahasa! Pilihan ini hanya akan ditampilkan jika parameter Filter Bahasa  'Butir Asosiasi' diatur ke 'Ya'. Pilih butir kontak untuk bahasa target. Asosiasi ini akan membiarkan modul Peribah Bahasa meneruskan ke item kontak terkait dalam bahasa lain. Jika digunakan, pastikan untuk menampilkan modul Perubah Bahasa pada halaman yang bersangkutan. Sebuah butir kontak yang diatur ke 'Semua' bahasa tidak dapat dihubungkan."
+COM_CONTACT_ITEM_ASSOCIATIONS_FIELDSET_LABEL="Hubungan Butir Kontak"
+COM_CONTACT_ITEM_ASSOCIATIONS_FIELDSET_DESC="Hanya untuk MultiBahasa! Pilihan ini hanya akan ditampilkan jika parameter Penyaring Bahasa  'Butir Hubungan' diatur ke 'Ya'. Pilih butir kontak untuk bahasa target. Hubungan ini akan membiarkan modul Ganti Bahasa meneruskan ke butir kontak terkait dalam bahasa lain. Jika digunakan, pastikan untuk menampilkan modul Ganti Bahasa pada halaman yang bersangkutan. Sebuah butir kontak yang diatur ke 'Semua' bahasa tidak dapat dihubungkan."
 COM_CONTACT_MAIL_FIELDSET_LABEL="Opsi Surat"
 COM_CONTACT_MANAGER_CONTACT="Pengelolaan Kontak: Kontak"
 COM_CONTACT_MANAGER_CONTACTS="Pengelolaan Kontak: Kontak"
@@ -268,7 +268,7 @@ COM_CONTACT_SELECT_CONTACT_LABEL="Pilih Kontak"
 COM_CONTACT_SELECT_USER="Pilih Pengguna"
 COM_CONTACT_SHOW_EMAIL_ADDRESS_DESC="Tampilkan Alamat Email"
 COM_CONTACT_SHOW_EMAIL_ADDRESS_LABEL="Alamat Email"
-COM_CONTACT_SHOW_EMPTY_CATEGORIES_DESC="Jika Tampilkan, kategori yang kosong akan tampil. Kategori hanya kosong - apabila tidak mempunyai Kontak atau subkategori."
+COM_CONTACT_SHOW_EMPTY_CATEGORIES_DESC="Jika Tampilkan, kategori yang kosong akan tampil. Kategori hanya kosong - apabila tidak mempunyai Kontak atau sub-kategori."
 COM_CONTACT_SUBMENU_CATEGORIES="Kategori"
 COM_CONTACT_SUBMENU_CONTACTS="Kontak"
 COM_CONTACT_TIP_ASSOCIATION="Kontak terkait"
@@ -284,4 +284,4 @@ COM_CONTACT_XML_DESCRIPTION="Komponen ini menampilkan daftar informasi kontak"
 JGLOBAL_FIELDSET_MISCELLANEOUS="Informasi Lainnya"
 JGLOBAL_NEWITEMSLAST_DESC="Kontak Baru secara standar berada di posisi terakhir. Pengurutan bisa diganti setelah Kontak ini disimpan."
 JLIB_HTML_BATCH_USER_LABEL="Atur Pengguna yang Terhubung"
-JLIB_RULES_SETTING_NOTES="1. Jika Anda mengubah pengaturan diatas, maka hanya akan diaplikasikan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari konfigurasi global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana pengaturan yang ada pada konfigurasi global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan ini pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika ini konflik dengan konfigurasi global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Pengaturan Gabungan).<br />2. Jika Anda memilih pengaturan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali pengaturan gabungan."
+JLIB_RULES_SETTING_NOTES="1. Jika Anda mengubah setelan diatas, maka hanya akan diterapkan ke komponen ini saja. Catatan:<br /><em>Diwariskan</em> berarti izin dari konfigurasi global dan kelompok induk yang akan digunakan.<br /><em>Ditolak</em> berarti tidak peduli bagaimana setelan yang ada pada konfigurasi global maupun kelompok induk, kelompok yang diedit tidak bisa mengambil tindakan ini pada komponen ini.<br /><em>Diizinkan</em> berarti kelompok yang sedang diedit akan bisa mengambil tindakan ini untuk komponen ini (jika terdapat konflik dengan konfigurasi global atau kelompok induk maka tidak akan berdampak; konflik akan diindikasikan dengan <em>Tidak Diizinkan (Terkunci)</em> dibawah Setelan Gabungan).<br />2. Jika Anda memilih setelan yang baru, klik <em>Simpan</em> untuk menyegarkan kembali setelan gabungan."
