--- a/j3x/admin_id-ID/id-ID.com_contact.sys.ini
+++ b/j3x/admin_id-ID/id-ID.com_contact.sys.ini
@@ -1,6 +1,6 @@
-; $Id: id-ID.com_contact.sys.ini 867 2014-02-23 00:27:05Z sikumbang $
+; $Id: id-ID.com_contact.sys.ini 3.4 2015-02-20 $
 ; Tim Hanacaraka Joomla! Indonesia
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
+; Copyright (C) 2005 - 2015 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
@@ -17,6 +17,8 @@ COM_CONTACT_CATEGORY_VIEW_DEFAULT_TITLE="Daftar Kontak di dalam sebuah Kategori"
 COM_CONTACT_CONTACT_VIEW_DEFAULT_DESC="Tautan ke informasi kontak untuk satu kontak."
 COM_CONTACT_CONTACT_VIEW_DEFAULT_OPTION="Standar"
 COM_CONTACT_CONTACT_VIEW_DEFAULT_TITLE="Kontak Tunggal"
+COM_CONTACT_CONTENT_TYPE_CONTACT="Kontak"
+COM_CONTACT_CONTENT_TYPE_CATEGORY="Kategori Kontak"
 COM_CONTACT_FEATURED_VIEW_DEFAULT_DESC="Tampilan yang menampilkan kontak pilihan."
 COM_CONTACT_FEATURED_VIEW_DEFAULT_OPTION="Standar"
 COM_CONTACT_FEATURED_VIEW_DEFAULT_TITLE="Kontak Pilihan"
