--- a/j3x/admin_id-ID/id-ID.com_admin.ini
+++ b/j3x/admin_id-ID/id-ID.com_admin.ini
@@ -1,4 +1,4 @@
-; $Id: id-ID.com_admin.ini 3.4 2015-02-17 dw1Rianto $
+; $Id: id-ID.com_admin.ini 3.4 2015-02-17 $
 ; Tim Hanacaraka Joomla! Indonesia
 ; Copyright (C) 2005 - 2015 Open Sumber Matters. All rights reserved.
 ; Lisensi GNU General Public Lisensi version 2 or later; see LICENSE.txt, see LICENSE.php
